--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
@@ -15,21 +15,37 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
     <!-- Customisation  -->
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
-
-</head>
-<body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  </head>
+  <body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
+    <header class="main-header">
+      <nav class="main-nav">
+        <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">Home</a>
+        {% if page.logo %}
+        <a class="blog-logo" href="{{ site.baseurl }}">
+          <img src="{{ page.logo }}" alt="Blog Logo" />
+        </a>
+        {% endif %}
+        <a class="subscribe-button icon-feed" href="{{ site.baseurl }}feed.xml"></a>
+        {% if page.about %} 
+        <a class="subscribe-button" href='{{ site.baseurl }}{{ page.about }}'>About</a> 
+        {% endif %}
+      </nav>
+      <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
+    </header>
 
     {{ content }}
+
     <footer class="site-footer clearfix">
-      <section class="copyright">
+      <!-- <section class="copyright">
         <a href="{{ site.baseurl }}">{{ site.name }}</a> &copy; 
-              {{date format="YYYY"}} &bull; All rights reserved.
-      </section>
-      <section class="poweredby">Made with Jekyll using 
-        <a href="http://github.com/rosario/kasper">Kasper theme</a>
-      </section>
+        {{date | date: "%-m/%-d/%Y" }} &bull; All rights reserved.
+        </section> -->
+        <section class="poweredby">Made with Jekyll using 
+          <a href="http://github.com/rosario/kasper">Kasper theme</a>
+        </section>
     </footer>
-    
+
     <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/assets/js/jquery.fitvids.js"></script>
     <script type="text/javascript" src="/assets/js/index.js"></script>
@@ -37,16 +53,16 @@
     <!-- Google Analytics Tracking code -->
     <script type="text/javascript">
 
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', '{{ site.google_analytics }}']);
-      _gaq.push(['_trackPageview']);
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', '{{ site.google_analytics }}']);
+_gaq.push(['_trackPageview']);
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
+(function() {
+  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
 
     </script>   
-</body>
+  </body>
 </html>
