updated Home URL

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
   <body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
     <header class="main-header">
       <nav class="main-nav">
-        <a class="back-button icon-arrow-left" href="{{ site.baseurl }}">Home</a>
+        <a class="back-button icon-arrow-left" href="{{ site.url }}">Home</a>
         {% if page.logo %}
         <a class="blog-logo" href="{{ site.baseurl }}">
           <img src="{{ page.logo }}" alt="Blog Logo" />
